Text changes  updated - search

--- a/public/app/partials/search/advancedSearch.html
+++ b/public/app/partials/search/advancedSearch.html
@@ -40,7 +40,7 @@
     </button>
     <h1>Advanced Search</h1>
 
-    <p>Find a post based on your search key or multiple filter criteria.</p>
+    <p>Find a post based on your search keyword or multiple filter criteria.</p>
 
 
 </div>
