--- a/public/app/views/templates/store_search.html
+++ b/public/app/views/templates/store_search.html
@@ -12,9 +12,9 @@
         <div class="col-sm-12">
             <form class="form-horizontal">
                 <div class="form-group">
-                    <h5 class="col-sm-2">Search Key:</h5>
+                    <h5 class="col-sm-2">Search Keyword:</h5>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" ng-model="storeSearchParams.searchKey" placeholder="enter search key">
+                        <input type="text" class="form-control" ng-model="storeSearchParams.searchKey" placeholder="Enter search keyword">
                     </div>
 
                 </div>
