Take a tour rearrangement - updated

--- a/public/app/partials/evezplace/home.html
+++ b/public/app/partials/evezplace/home.html
@@ -42,11 +42,11 @@
                     </div>
 
                     <div class="col-md-2 col-xs-6 col-md-offset-2 text-center no-padding">
-                        <a class="btn btn-lg btn-create-store" href="#whatdoiget" style="text-align:center; padding:7px 10px; font-size:16px;font-weight: 400; width:95%;margin-top:2px;">Create Store</a>
+                        <a class="btn btn-lg btn-create-store" href="#whatdoiget" id="step4" data-target="#step4" data-toggle="tab" data-slide-to="3" style="text-align:center; padding:7px 10px; font-size:16px;font-weight: 400; width:95%;margin-top:2px;">Create Store</a>
                     </div>
 
                     <div class="col-md-2 col-xs-6 text-center no-padding">
-                        <a href class="btn btn-lg btn-create-store" ng-click="Create_Campaign();" style="text-align:center; padding:7px 10px; font-size:16px;font-weight: 400; width:95%;margin-top:2px;">Create Ads</a>
+                        <a href class="btn btn-lg btn-create-store" ng-click="Create_Campaign();" id="step5" data-target="#step5" data-toggle="tab" data-slide-to="4" style="text-align:center; padding:7px 10px; font-size:16px;font-weight: 400; width:95%;margin-top:2px;">Create Ads</a>
                     </div>
 
                     
