--- a/public/app/app.css
+++ b/public/app/app.css
@@ -91,6 +91,7 @@ input[type=number]::-webkit-outer-spin-button {
 .tour-step
 {
     width:400px;
+    text-align: center;
 }
 /*Admin*/
 /*Admin news letter table scroll*/
