UI alignment for div

--- a/public/app/partials/profile/myBlog-details.html
+++ b/public/app/partials/profile/myBlog-details.html
@@ -110,7 +110,7 @@
                     </h4>
                 </div>
             </div>
-            <div class="row" ng-include='"partials/profile/userProfileCount.html"'><div>
+            <div class="row" ng-include='"partials/profile/userProfileCount.html"'></div>
         </div>
         <div class="col-md-12" id="view">
             <h3>About Me</h3>
