--- a/public/app/partials/profile/mystores.html
+++ b/public/app/partials/profile/mystores.html
@@ -91,7 +91,7 @@
                         </div>
                     </div>
 
-                    <div class="row" ng-include='"partials/profile/userProfileCount.html"'><div>
+                    <div class="row" ng-include='"partials/profile/userProfileCount.html"'></div>
                     
                 </div>
             </div>
