--- a/public/app/partials/profile/home.html
+++ b/public/app/partials/profile/home.html
@@ -123,7 +123,7 @@
                             </h4>
                         </div>
                         </div>
-                        <div class="row" ng-include='"partials/profile/userProfileCount.html"'><div>
+                        <div class="row" ng-include='"partials/profile/userProfileCount.html"'></div>
                     </div>
                 </div>
                 <div class="col-md-12"  id="view">
