--- a/public/app/partials/profile/myBlog.html
+++ b/public/app/partials/profile/myBlog.html
@@ -62,7 +62,7 @@
                             </h4>
                         </div>
                     </div>
-                    <div class="row" ng-include='"partials/profile/userProfileCount.html"'><div>
+                    <div class="row" ng-include='"partials/profile/userProfileCount.html"'></div>
                 </div>
             </div>
 
