--- a/public/app/partials/profile/mydiscussion.html
+++ b/public/app/partials/profile/mydiscussion.html
@@ -63,7 +63,7 @@
                             </h4>
                         </div>
                     </div>
-                    <div class="row" ng-include='"partials/profile/userProfileCount.html"'><div>
+                    <div class="row" ng-include='"partials/profile/userProfileCount.html"'></div>
                 </div> 
             </div>
 
