--- a/public/app/partials/profile/mylisting.html
+++ b/public/app/partials/profile/mylisting.html
@@ -37,7 +37,7 @@
         </ul>
     </div>
 </nav>
-<div class="col-md-12" ng-controller="profileCtrl">
+<div class="col-md-12">
     <div class="row user-menu-container square">
         <div class="row cover-section custom-profile-covers">
             <div class="col-md-4 small-cover-pic">
