--- a/public/app/partials/profile/mystores.html
+++ b/public/app/partials/profile/mystores.html
@@ -37,7 +37,7 @@
         </ul>
     </div>
 </nav>
-<div class="col-md-12" ng-controller="profileCtrl">
+<div class="col-md-12">
     <div class="row user-menu-container square">
         <div class="row cover-section custom-profile-covers">
             <div class="col-md-4 small-cover-pic">
@@ -182,6 +182,12 @@
                     </div>
                 </div>
             </div>
+            <!--spinner-->
+            <div class="col-md-12" style="height:150px;">
+                <span us-spinner="{radius:20, width:10, length: 10,color: '#e50880'}" spinner-key="spinner-1" spinner-start-active="false">
+                </span>
+            </div>
+            <!--spinner ends-->
         </div>
     </div>
 </div>
