--- a/public/app/partials/evezplace/manage/Classifieds/classified_promotion.html
+++ b/public/app/partials/evezplace/manage/Classifieds/classified_promotion.html
@@ -32,7 +32,7 @@
                         <label>Your Target Audience (send to)</label>
                     </div>
                     <div class="col-md-4">
-                        <label>Your Personal Circles Through Stream It</label>
+                        <label>Select Visibility</label>
                     </div>
                 </div>
             </div>
@@ -43,13 +43,8 @@
                 <div class="row" style="margin-top: 10px; margin-bottom: 10px">
                     <div class="form-group">
                         <div class="col-md-offset-6 col-md-4">
-                            <input type="checkbox"
-                                   id="isMyEves"
-                                   name="isMyEves"
-                                   ng-model="addClassified.step3.is_my_eves"
-                                   ng-checked="addClassified.step3.is_my_eves"
-                                   style="width: 16px; height: 16px"> <label
-                                for="isMyEves">My Friends</label>
+                            <input type="radio" ng-model="addClassified.step3.visibility" value="1" ng-click="HideCircles()">
+                            <label for="All">All</label>
                         </div>
                     </div>
                 </div>
@@ -57,15 +52,21 @@
                 <div class="row" style="margin-top: 10px; margin-bottom: 10px">
                     <div class="form-group">
                         <div class="col-md-offset-6 col-md-4">
-                            <input type="checkbox"
-                                   id="isMyCircles"
-                                   name="isMyCircles"
-                                   value="isMyCircles"
-                                   ng-model="addClassified.step3.is_my_circles"
-                                   ng-checked="addClassified.step3.is_my_circles"
-                                   style="width: 16px; height: 16px">
-                            <label
-                                    for="isMyCircles">My Circles</label>
+                          <input type="radio" ng-model="addClassified.step3.visibility" value="2" ng-click="getCircles()">
+                            <label for="Circles">Circles</label>
+                        </div>
+                        <!--
+                        <div ng-show="selectedVisibility.id == 2 && loggedInUserId == post.user.id">
+                            <select class="form-control" ng-model="PostCircle" ng-options="circle as circle.title for circle in UserCircles" ng-init="PostCircle = GetSelectedCircle(post.circle_id,UserCircles)" ng-change="ChangeCircle(post,PostCircle)">
+                            </select>
+                        </div>-->
+
+                        <div class="col-md-offset-4 col-md-4 no-padding" ng-show="Showcircles">
+                            
+                            <div class="col-md-offset-7 col-md-6 no-padding">
+                                <select class="form-control" ng-model="addClassified.step3.SelectedCircle" ng-options="circle as circle.title for circle in Circles">
+                                </select>
+                            </div>   
                         </div>
                     </div>
                 </div>
@@ -73,14 +74,8 @@
                 <div class="row" style="margin-top: 10px; margin-bottom: 10px">
                     <div class="form-group">
                         <div class="col-md-offset-6 col-md-4">
-                            <input type="checkbox"
-                                   id="isOnlyMe"
-                                   name="isOnlyMe"
-                                   value="isOnlyMe"
-                                   ng-model="addClassified.step3.is_only_me"
-                                   ng-checked="addClassified.step3.is_only_me"
-                                   style="width: 16px; height: 16px"> <label
-                                for="isOnlyMe">Only Me</label>
+                            <input type="radio" ng-model="addClassified.step3.visibility" value="3" ng-click="HideCircles()">
+                            <label for="Friends">Friends</label>
                         </div>
                     </div>
                 </div>
@@ -108,15 +103,8 @@
                 <div class="row" style="margin-top: 10px; margin-bottom: 10px">
                     <div class="form-group">
                         <div class="col-md-offset-6 col-md-4">
-                            <input type="checkbox"
-                                   id="isOpenToPublic"
-                                   name="isOpenToPublic"
-                                   value="isOpenToPublic"
-                                   ng-model="addClassified.step3.is_open_to_public"
-                                   ng-checked="addClassified.step3.is_open_to_public"
-                                   style="width: 16px; height: 16px">
-                            <label
-                                    for="isOpenToPublic">Open to Public</label>
+                            <input type="radio" ng-model="addClassified.step3.visibility" value="4" ng-click="HideCircles()">
+                            <label for="me">Me</label>
                         </div>
                     </div>
                 </div>
