--- a/public/app/partials/evezplace/manage/Classifieds/classified_promotion.html
+++ b/public/app/partials/evezplace/manage/Classifieds/classified_promotion.html
@@ -29,7 +29,7 @@
             <div class="row" style="margin-top: 10px; margin-bottom: 10px">
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-4">
-                        <label>Your Target Audience (send to)</label>
+                        <label>Your Target Audience (send to) <b style="color: #e51385">*</b></label>
                     </div>
                     <div class="col-md-4">
                         <label>Select Visibility</label>
@@ -51,19 +51,13 @@
 
                 <div class="row" style="margin-top: 10px; margin-bottom: 10px">
                     <div class="form-group">
-                        <div class="col-md-offset-6 col-md-4">
+                        <div class="col-md-offset-6 col-md-2">
                           <input type="radio" ng-model="addClassified.step3.visibility" value="2" ng-click="getCircles()">
                             <label for="Circles">Circles</label>
                         </div>
-                        <!--
-                        <div ng-show="selectedVisibility.id == 2 && loggedInUserId == post.user.id">
-                            <select class="form-control" ng-model="PostCircle" ng-options="circle as circle.title for circle in UserCircles" ng-init="PostCircle = GetSelectedCircle(post.circle_id,UserCircles)" ng-change="ChangeCircle(post,PostCircle)">
-                            </select>
-                        </div>-->
 
-                        <div class="col-md-offset-4 col-md-4 no-padding" ng-show="Showcircles">
-                            
-                            <div class="col-md-offset-7 col-md-6 no-padding">
+                        <div class="col-md-4 no-padding" ng-show="Showcircles">
+                            <div class="col-md-6 no-padding">
                                 <select class="form-control" ng-model="addClassified.step3.SelectedCircle" ng-options="circle as circle.title for circle in Circles">
                                 </select>
                             </div>   
