--- a/public/app/partials/evezplace/browse/store/place-order.html
+++ b/public/app/partials/evezplace/browse/store/place-order.html
@@ -397,7 +397,7 @@ box-shadow: 0 1px 3px rgba(0,0,0,0.1);padding:0px;
                <!--  <input type="text" ng-model="orderData.buyer.code" placeholder="BuyerCode(Optional)" class="col-md-8 col-xs-12"/> -->
             </div>
             <div class="col-md-4 col-xs-12">
-                <a href="" ng-click="ContactEdit=true"  class="btn btn-sunny" style="text-decoration:none; color: burlywood;" >&nbsp; &nbsp;CHANGE DETAILS&nbsp; &nbsp;</a>
+                <a href="" ng-click="EditContactDetails()"  class="btn btn-sunny" style="text-decoration:none; color: burlywood;" >&nbsp; &nbsp;CHANGE DETAILS&nbsp; &nbsp;</a>
             </div>
         </div>
 
