--- a/public/app/partials/evezplace/browse/store/place-order.html
+++ b/public/app/partials/evezplace/browse/store/place-order.html
@@ -465,6 +465,7 @@ box-shadow: 0 1px 3px rgba(0,0,0,0.1);padding:0px;
         </div> 
 
         <div class="col-md-12">
+        <slick infinite="true" slides-to-show="3" slides-to-scroll="1" autoplay="false" init-onload=true data="orderData.address">
         <div class="panel panel-default col-md-3" style="padding:0px;margin:10px;" ng-repeat="address in orderData.address" >
             <div class="panel-heading">
                 <h3 class="panel-title">
@@ -503,6 +504,7 @@ box-shadow: 0 1px 3px rgba(0,0,0,0.1);padding:0px;
                 </div>
             </div>
         </div>
+        </slick>
         <hr />
         </div>
 
