--- a/public/app/partials/evezplace/browse/store/place-order.html
+++ b/public/app/partials/evezplace/browse/store/place-order.html
@@ -477,7 +477,7 @@ box-shadow: 0 1px 3px rgba(0,0,0,0.1);padding:0px;
                 <div class="col-md-6 panel-body" style="margin:0 auto; text-align:left;" >
                  
                    <address>
-                    <strong>Delivery Address</strong><br>
+                    <strong>Billing Address</strong><br>
                     <span ng-if="address.billing_address.address_line1">{{address.billing_address.address_line1}}<br></span>
                     <span ng-if="address.billing_address.address_line2">{{address.billing_address.address_line2}}<br></span>
                     <span ng-if="address.billing_address.address_line3">{{address.billing_address.address_line3}}<br></span>
